--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,1 +1,25 @@
-<router-outlet/>
+<div class="flex flex-row h-full w-full">
+  <div class="p-4 w-128 ">
+    <h2 class="col-span-full mb-4">Import Data</h2>
+    <div class="mb-4">
+      @if (formGroup) {
+        <form [formGroup]="formGroup" class="grid grid-cols-1 gap-2">
+          <app-directory-input
+            [control]="formGroup.get('path')"
+            placeholder="Select Mods Folder"
+          ></app-directory-input>
+        </form>
+      }
+    </div>
+
+    <p-button
+      label="Generate graph"
+      class="col-span-full"
+      (onClick)="onGenerate()"
+    />
+  </div>
+  <div class="mt-4 max-w-full overflow-auto border border-gray-300 m-2 w-full">
+    <div #svgContainer class="svg-wrapper"></div>
+  </div>
+</div>
+<p-toast/>
