--- a/frontend/src/app/components/svgviewer/svgviewer.html
+++ b/frontend/src/app/components/svgviewer/svgviewer.html
@@ -1,1 +1,1 @@
-<div #svgContainer class="svg-wrapper max-w-full max-h-full w-full h-full"></div>
+<div #svgContainer class="svg-wrapper max-w-full border border-gray-300 bg-black w-full h-full"></div>
