--- a/frontend/src/app/components/tabs/interactive-two-tab/interactive-two-tab.html
+++ b/frontend/src/app/components/tabs/interactive-two-tab/interactive-two-tab.html
@@ -1,4 +1,6 @@
-<div class="h-full w-full flex flex-col gap-2">
+<div class="flex flex-col gap-2 h-full w-full min-h-0 min-w-0 overflow-hidden">
   <p-toggle-button [(ngModel)]="showIcons" (onChange)="regenerate$.next()" onLabel="Hide icons" offLabel="Show icons"/>
-  <div #graph class="h-full w-full bg-black"></div>
+  <div class="relative flex-grow min-h-0 min-w-0 overflow-hidden  border border-gray-300 bg-black">
+    <div #graph class="absoule inset-0 h-full w-full"></div>
+  </div>
 </div>
