feat(language): enhance language selection and internationalization support - Implemented a language selection dropdown with flag icons for English and Spanish - Updated UI components to support dynamic language switching - Added internationalization attributes to relevant labels and placeholders

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,6 @@
-
 @import "./tailwind-import.css";
 @import "primeicons/primeicons.css";
+@import "flag-icons/css/flag-icons.min.css";
 
 * {
   font-family: 'Lato', sans-serif;
