--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -7,12 +7,14 @@
           <form [formGroup]="formGroup" class="grid grid-cols-1 gap-2">
             <app-directory-input
               [control]="formGroup.get('path')"
+              i18n-placeholder
               placeholder="Select Mods Folder"
             ></app-directory-input>
           </form>
         }
         <p-button
           fluid
+          i18n-label
           label="Generate"
           (onClick)="onGenerate()"
         />
@@ -22,15 +24,27 @@
         @if (displayForm) {
           <form [formGroup]="displayForm" class="grid grid-cols-1 gap-2">
             <p-toggle-button formControlName="showIcons" i18n-onLabel i18n-offLabel onLabel="Hide icons" offLabel="Show icons"/>
-            <label>Alpha decay: {{ displayOptions.alphaDecay }}</label>
+            <label i18n>Alpha decay: {{ displayOptions.alphaDecay }}</label>
             <p-slider formControlName="alphaDecay" [min]="0" [max]="0.1" [step]="0.001"/>
-            <label>Velocity decay: {{ displayOptions.velocityDecay }}</label>
+            <label i18n>Velocity decay: {{ displayOptions.velocityDecay }}</label>
             <p-slider formControlName="velocityDecay" [min]="0.01" [max]="1" [step]="0.01"/>
           </form>
         }
       </div>
-      <p-button label="English" (onClick)="setLanguage('en')" class="w-full"/>
-      <p-button label="Spanish" (onClick)="setLanguage('es')" class="w-full"/>
+      <p-select [options]="languageOptions" (onChange)="setLanguage($event.value)" [ngModel]="currentLanguage" i18n-placeholder placeholder="Select Language">
+        <ng-template #selectedItem let-item>
+          <div class="flex items-center gap-2">
+            <span [class]="'fi fi-' + item.countryCode" style="width: 18px"></span>
+            <div>{{ item.label }}</div>
+          </div>
+        </ng-template>
+        <ng-template #item let-item>
+          <div class="flex items-center gap-2">
+            <span [class]="'fi fi-' + item.countryCode" style="width: 18px"></span>
+            <div>{{ item.label }}</div>
+          </div>
+        </ng-template>
+      </p-select>
     </div>
   </p-scroll-panel>
 
