--- a/language-index.gohtml
+++ b/language-index.gohtml
@@ -1,12 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title></title>
+    <meta charset="utf-8">
+    <title></title>
+    <style>
+        html {
+            background-color: #000;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 <script>
-  window.location.href = '/{{.Lang}}/';
+    window.location.href = '/{{.Lang}}/';
 </script>
 </body>
 </html>
