--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,94 +1,1 @@
-<div class="flex flex-row max-h-screen h-screen w-full p-8 gap-4">
-  <p-scroll-panel class="w-1/4">
-    <div class="flex flex-col gap-4">
-      <div class="flex flex-col gap-4 p-4 border border-neutral-700 rounded">
-        <h3 i18n>Modpack selection</h3>
-        @if (formGroup) {
-          <form [formGroup]="formGroup" class="grid grid-cols-1 gap-2">
-            <app-directory-input
-              [control]="formGroup.get('path')"
-              i18n-placeholder
-              placeholder="Select mods folder"
-            ></app-directory-input>
-          </form>
-        }
-        <p-button
-          fluid
-          i18n-label
-          label="Process selected folder"
-          (onClick)="onGenerate()"
-        />
-      </div>
-      <div class="flex flex-col gap-4 p-4 border border-neutral-700 rounded">
-        <h3 i18n>Graph display options</h3>
-        @if (graphDisplayForm) {
-          <form [formGroup]="graphDisplayForm" class="grid grid-cols-1 gap-2">
-            <label i18n>Show mod icons</label>
-            <p-toggle-switch formControlName="showIcons"/>
-          </form>
-        }
-      </div>
-      <div class="flex flex-col gap-4 p-4 border border-neutral-700 rounded">
-        <h3 i18n>List display options</h3>
-        @if (listDisplayForm) {
-          <form [formGroup]="listDisplayForm" class="grid grid-cols-1 gap-2">
-            <label i18n>Show required mods</label>
-            <p-toggle-switch formControlName="showRequired"/>
-            <label i18n>Show optional mods</label>
-            <p-toggle-switch formControlName="showOptional"/>
-            <label i18n>Show installed mods</label>
-            <p-toggle-switch formControlName="showInstalled"/>
-          </form>
-        }
-      </div>
-      <p-select [options]="languageOptions" (onChange)="setLanguage($event.value)" [ngModel]="currentLanguage" i18n-placeholder
-                placeholder="Select Language">
-        <ng-template #selectedItem let-item>
-          <div class="flex items-center gap-2">
-            <span [class]="'fi fi-' + item.countryCode" style="width: 18px"></span>
-            <div>{{ item.label }}</div>
-          </div>
-        </ng-template>
-        <ng-template #item let-item>
-          <div class="flex items-center gap-2">
-            <span [class]="'fi fi-' + item.countryCode" style="width: 18px"></span>
-            <div>{{ item.label }}</div>
-          </div>
-        </ng-template>
-      </p-select>
-    </div>
-  </p-scroll-panel>
-
-  <div class="flex flex-col gap-3 w-3/4 max-w-3/4 max-h-screen min-h-0 p-4 border border-neutral-700 rounded">
-    <p-select-button fluid [options]="items" [(ngModel)]="currentTab">
-      <ng-template #item let-item>
-        <i [class]="item?.icon"></i>
-        <p>{{ item.label }}</p>
-      </ng-template>
-    </p-select-button>
-    @switch (currentTab) {
-      @case ('list') {
-        <app-list-tab
-          class="h-full w-full flex flex-col gap-2 min-h-0"
-          [graphData]="graphData"
-          [options]="listDisplayOptions"
-        />
-      }
-      @case ('2Di') {
-        <app-interactive-two-tab
-          class="h-full w-full flex flex-col gap-2 min-h-0 border border-neutral-700"
-          [graphData]="graphData"
-          [options]="graphDisplayOptions"
-        />
-      }
-      @case ('3Di') {
-        <app-interactive-three-tab
-          class="h-full w-full flex flex-col gap-2 min-h-0 border border-neutral-700"
-          [graphData]="graphData"
-          [options]="graphDisplayOptions"
-        />
-      }
-    }
-  </div>
-</div>
-<p-toast/>
+<div class="flex flex-row max-h-screen h-screen w-full p-8 gap-4"></div>
