--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,1 +1,9 @@
-<div class="flex flex-row max-h-screen h-screen w-full p-8 gap-4"></div>
+<div class="app-shell flex h-screen">
+  <main class="flex-1 overflow-auto">
+    <router-outlet/>
+  </main>
+  <p-toast/>
+  <div class="fixed bottom-4 right-4 z-50">
+    <p-button [icon]="isDarkTheme ? 'pi pi-sun' : 'pi pi-moon'" rounded (click)="toggleTheme()"></p-button>
+  </div>
+</div>
