--- a/frontend/src/tailwind-import.css
+++ b/frontend/src/tailwind-import.css
@@ -1,4 +1,4 @@
 @import "tailwindcss";
 @import "tailwindcss-primeui";
 
-@custom-variant dark (&:where(.dark-theme, .dark-theme *));
+@custom-variant dark (&:where(.dark, .dark *));
