--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -4,7 +4,13 @@
   </main>
   <p-toast/>
   <div class="fixed bottom-4 right-4 z-50">
-    <p-button [icon]="isDarkTheme ? 'pi pi-sun' : 'pi pi-moon'" outlined rounded (click)="toggleTheme()"></p-button>
+    <p-button
+      outlined
+      rounded
+      [pTooltip]="themeChangeTooltip()"
+      [icon]="isDarkTheme() ? 'pi pi-sun' : 'pi pi-moon'"
+      (click)="toggleTheme()"
+    ></p-button>
   </div>
 </div>
 <p-confirm-dialog/>
